manifests/busybox-limits.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: limit-test
  name: limit-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: limit-test
  template:
    metadata:
      labels:
        run: limit-test
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - while true; do sleep 2; done
        image: busybox
        imagePullPolicy: Always
        name: limit-test
