manifests/hotrod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: hotrod
    app.kubernetes.io/instance: jaeger
  name: jaeger-hotrod
  namespace: hotrod
spec:
  ports:
  - name: hotrod
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: hotrod
    app.kubernetes.io/instance: jaeger
  type: ClusterIP
