manifests/hotrod-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hotrod-service
spec:
  hosts:
    - "*"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            exact: /hotrod
      route:
        - destination:
            host: jaeger-hotrod.jaeger.svc.cluster.local
            port:
              number: 80
